# shain-engine

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Anchor.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SUPPORT.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml  README.md
cli/src/: config.rs  logging.rs  main.rs
cli/src/commands/: config_show.rs  init.rs  mod.rs  pdas.rs  session.rs  verify.rs
docs/: api.md  architecture.md  security.md
docs/notes/: 01-naming.md  02-rent.md  03-cpi.md  04-errors.md  05-seeds.md  06-testing.md  07-deployment.md  08-anchor-versions.md  09-session-lifecycle.md  10-idl.md  11-upgrade-authority.md  12-treasury.md  13-fees.md  14-devnet.md  15-mainnet-readiness.md  16-ata-creation.md  17-close-reopen.md  18-holder-check.md  19-expiry.md  20-versioning.md  21-release-flow.md  22-audit-prep.md  23-threat-model.md  24-bot-integration.md  25-cli-workflow.md  26-sdk-migration.md  27-ci-tips.md  28-formatting.md  29-ops.md  30-faq.md
examples/: README.md  basic_session.ts  gate_swap.ts  monitor_session.rs
idl/: shain.json
programs/shain/: Cargo.toml
programs/shain/src/: constants.rs  error.rs  instructions.rs  lib.rs  state.rs
programs/shain/src/instructions/: close_session.rs  gated_action.rs  initialize.rs  start_session.rs
programs/shain/tests/: test_shain.rs
sdk/: .gitignore  README.md  jest.config.js  package.json  tsconfig.json
sdk/src/: client.ts  constants.ts  errors.ts  index.ts  pda.ts  session.ts  types.ts
sdk/tests/: session.test.ts
tests/integration/: devnet.test.ts
