[workspace]
members = ["programs/*"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["Shain core"]
license = "MIT"
repository = "https://github.com/shain-labs/shain-engine"
homepage = "https://shain.fun"
rust-version = "1.78"
description = "Shain: holder-gated private session engine for Solana"

[workspace.dependencies]
anchor-lang = "1.0.0"
anchor-spl = "1.0.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = 3
