[package]
name = "shain-cli"
description = "Command-line operator for the Shain private session engine."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
rust-version.workspace = true

[[bin]]
name = "shain"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
dirs = { workspace = true }
