[package]
name = "shain"
description = "Holder-gated private session engine for Solana, written in Anchor."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "shain"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
borsh = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
litesvm = "0.11.0"
